# Project23_custom

./: README.md  db.sqlite3  pyproject.toml
apps/: models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_alter_customuser_address_alter_customuser_contact_and_more.py
config/: settings.py  urls.py
scripts/: create.py  destroy.py  retreive.py  retreive_all.py  update.py
